# Fraud_Detection

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  conftest.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
models/: X_shap_sample_transformed.joblib  feature_names_transformed.joblib  lgbm_fe_recall_optimized.joblib  shap_explainer.joblib  shap_values_sample.joblib  test_metrics.joblib
notebooks/: EDA.ipynb  preprocessing.ipynb  testing.ipynb
src/: config.py  data_preprocessing.py  pipeline.py  train.py  utils.py
tests/: test_pipeline.py  test_preprocessing.py
