[project]
name = "fraud-detection"
version = "0.1.0"
description = "End-to-end fraud detection: LightGBM + SHAP explainability + Streamlit dashboard"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]
